# agent-scope

./: .env.example  .gitignore  AGENTS.md  AUDIT-REPORT.md  COLLABORATION.md  DEMO-SCRIPT.md  JUDGES.md  PLANNING.md  PROJECT.md  README.md  SECURITY.md  STATE.md  SUBMISSION-NOTES.md  SUBMISSION.md  TODO.md  TRACKS.md  agent.json  agent_log.json  conversation-log.md  deployment-1.json  deployment-10.json  deployment-130.json  deployment-1301.json  deployment-137.json  deployment-1750.json  deployment-42161.json  deployment-480.json  deployment-4801.json  deployment-57073.json  deployment-763373.json  deployment-84532.json  deployment-celo.json  deployment-enforcers.json  deployment-status.json  deployment.json  deployments.json  hardhat.config.cjs  index.html  package-lock.json  package.json
agent/: COLLABORATION.md  README.md
assets/: SIWXUtil-DzYTVZKm.js  basic-BJ2V09rx.js  ccip-B7Sanrcd.js  ccip-BU8tugPp.js  ccip-CKrvBeYw.js  ccip-CTIR3nNt.js  ccip-D98l1afb.js  ccip-DEo-uFAd.js  ccip-DHdlgMoo.js  ccip-Dd6-0qEh.js  ccip-DiNHbjtk.js  ccip-DkvhRDkh.js  ccip-Eu9IpX3_.js  connectors-B9SIHFF7.js  core-CP1MTvJx.js  createBatchScheduler-VZdpIE-n.js  dist-C82CU4-S.js  en_US-Y4ZOVFV4-BZP0rPhl.js  en_US-Y4ZOVFV4-Bp2ph7CI.js  en_US-Y4ZOVFV4-COoXXMzK.js  en_US-Y4ZOVFV4-Cs-9oGbB.js  en_US-Y4ZOVFV4-DEyt0NzT.js  en_US-Y4ZOVFV4-DXDwuYyN.js  en_US-Y4ZOVFV4-Dh5L9jTt.js  en_US-Y4ZOVFV4-HfwkcqV9.js  en_US-Y4ZOVFV4-KxvVSWug.js  en_US-Y4ZOVFV4-U8-GmBe1.js  (+29 more)
solana/agent-scope-solana/programs/agent-scope-solana/: Cargo.toml
solana/agent-scope-solana/programs/agent-scope-solana/src/: lib.rs
(+141 files in other folders)
